--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HTML Header with Navigation Bar</title>
+  <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 <body>
-    
+  <header>
+    <div class="logo-container">
+      <img class="logo" src="photos\SeaFood.png" alt="Logo 1">
+      <img class="logo" src="photos\FreshFish.png" alt="Logo 2">
+    </div>
+    <h1>Welcome to Our Website</h1>
+  </header>
+  <nav>
+    <button class="home active"><a href="index.html">Home</a></button>
+    <button class="about"><a href="about.html">About</a></button>
+    <button class="contact"><a href="contact.html">Contact</a></button>
+  </nav>
+
+  <p>HOME</p>
+
+  <footer>
+    <div class="footer-logo-container">
+      <img class="footer-logo" src="photos\SeaFood.png" alt="Footer Logo 1">
+      <img class="footer-logo" src="photos\FreshFish.png" alt="Footer Logo 2">
+    </div>
+    <div class="footer-text">
+      &copy; 2023 Your Company Name. All rights reserved.
+    </div>
+    <div class="footer-logo-container">
+      <img class="footer-logo" src="photos\SeaFood.png" alt="Footer Logo 1">
+      <img class="footer-logo" src="photos\FreshFish.png" alt="Footer Logo 2">
+    </div>
+  </footer>
 </body>
 </html>
