homw page adjustments

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Header with Navigation Bar</title>
+  <title>Sustainable Sea Treasures</title>
   <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 
@@ -13,7 +13,7 @@
       <img class="logo" src="photos\SeaFood.png" alt="Logo 1">
       <img class="logo" src="photos\FreshFish.png" alt="Logo 2">
     </div>
-    <h1>Welcome to Our Website</h1>
+    <h1>Sustainable Sea Treasures</h1>
   </header>
   <nav>
     <button class="home"><a href="index.html">Home</a></button>
@@ -29,7 +29,7 @@
       <img class="footer-logo" src="photos\FreshFish.png" alt="Footer Logo 2">
     </div>
     <div class="footer-text">
-      &copy; 2023 Your Company Name. All rights reserved.
+      &copy; 2023 Sustainable Sea Treasures. All rights reserved.
     </div>
     <div class="footer-logo-container">
       <img class="footer-logo" src="photos\SeaFood.png" alt="Footer Logo 1">
