--- a/main secction.html
+++ b/main secction.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sustainable Sea Treasures</title>
+  
+  <style>
 /* Body */
 body {
   font-family: Arial, sans-serif;
@@ -185,3 +193,87 @@ footer {
   display: table;
   clear: both;
 }
+
+
+  </style>
+</head>
+
+<body>
+  <header>
+    <div class="logo-container">
+      <img class="logo" src="photos\SeaFood.png" alt="Logo 1">
+      <img class="logo" src="photos\FreshFish.png" alt="Logo 2">
+    </div>
+    <h1>Sustainable Sea Treasures</h1>
+  </header>
+  <nav>
+    <button class="home active"><a href="index.html">Home</a></button>
+    <button class="about"><a href="about.html">About</a></button>
+    <button class="contact"><a href="contact.html">Contact</a></button>
+  </nav>
+
+  <div class="main clearfix">
+    <section class="sub-section">      
+      <p>Main1</p>
+    </section>
+    <section class="sub-section">      
+      <p>Main2</p>
+    </section>
+    <section class="sub-section">      
+      <p>Main3</p>
+    </section>
+    <section class="sub-section">       
+      <p>Main4</p>
+    </section>
+    <section class="sub-section">       
+      <p>Main5</p>
+    </section>
+    <section class="sub-section">      
+      <p>Main6</p>
+    </section>
+    <section class="sub-section">      
+      <p>Main7</p>
+    </section>
+    <section class="sub-section">      
+      <p>Main8</p>
+    </section>
+    <section class="sub-section">      
+      <p>Main9</p>
+    </section>
+    <section class="sub-section">      
+      <p>Main10</p>
+    </section> 
+  </div>
+
+  <aside class="side clearfix">
+    <section class="sub-section">      
+      <p>SIDE1</p>
+    </section>
+    <section class="sub-section">      
+      <p>SIDE2</p>
+    </section>
+    <section class="sub-section">      
+      <p>SIDE3</p>
+    </section>
+    <section class="sub-section">      
+      <p>SIDE4</p>
+    </section>    
+  </aside>
+
+  <div style="clear: both;"></div>
+
+  <footer>
+    <div class="footer-logo-container">
+      <img class="footer-logo" src="photos\SeaFood.png" alt="Footer Logo 1">
+      <img class="footer-logo" src="photos\FreshFish.png" alt="Footer Logo 2">
+    </div>
+    <div class="footer-text">
+      &copy; 2023 Sustainable Sea Treasures. All rights reserved.
+    </div>
+    <div class="footer-logo-container">
+      <img class="footer-logo" src="photos\SeaFood.png" alt="Footer Logo 1">
+      <img class="footer-logo" src="photos\FreshFish.png" alt="Footer Logo 2">
+    </div>
+  </footer>
+</body>
+</html>
