--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Header with Navigation Bar</title>
+  <title>Sustainable Sea Treasures</title>
   <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 <body>
@@ -12,7 +12,7 @@
       <img class="logo" src="photos\SeaFood.png" alt="Logo 1">
       <img class="logo" src="photos\FreshFish.png" alt="Logo 2">
     </div>
-    <h1>Welcome to Our Website</h1>
+    <h1>Sustainable Sea Treasures</h1>
   </header>
   <nav>
     <button class="home active"><a href="index.html">Home</a></button>
@@ -20,7 +20,58 @@
     <button class="contact"><a href="contact.html">Contact</a></button>
   </nav>
 
-  <p>HOME</p>
+  <div class="main clearfix">
+    <section class="sub-section">      
+      <p>Main1</p>
+    </section>
+    <section class="sub-section">      
+      <p>Main2</p>
+    </section>
+    <section class="sub-section">      
+      <p>Main3</p>
+    </section>
+    <section class="sub-section">       
+      <p>Main4</p>
+    </section>
+    <section class="sub-section">       
+      <p>Main5</p>
+    </section>
+    <section class="sub-section">      
+      <p>Main6</p>
+    </section>
+    <section class="sub-section">      
+      <p>Main7</p>
+    </section>
+    <section class="sub-section">      
+      <p>Main8</p>
+    </section>
+    <section class="sub-section">      
+      <p>Main9</p>
+    </section>
+    <section class="sub-section">      
+      <p>Main10</p>
+    </section> 
+  </div>
+
+  <aside class="side clearfix">
+    <section class="sub-section">      
+      <p>SIDE1</p>
+    </section>
+    <section class="sub-section">      
+      <p>SIDE2</p>
+    </section>
+    <section class="sub-section">      
+      <p>SIDE3</p>
+    </section>
+    <section class="sub-section">      
+      <p>SIDE4</p>
+    </section>
+    <section class="sub-section">      
+      <p>SIDE5</p>
+    </section>    
+  </aside>
+
+  <div style="clear: both;"></div>
 
   <footer>
     <div class="footer-logo-container">
@@ -28,7 +79,7 @@
       <img class="footer-logo" src="photos\FreshFish.png" alt="Footer Logo 2">
     </div>
     <div class="footer-text">
-      &copy; 2023 Your Company Name. All rights reserved.
+      &copy; 2023 Sustainable Sea Treasures. All rights reserved.
     </div>
     <div class="footer-logo-container">
       <img class="footer-logo" src="photos\SeaFood.png" alt="Footer Logo 1">
