first page text added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sustainable Sea Treasures</title>
   <link rel="stylesheet" type="text/css" href="index.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -20,54 +21,67 @@
     <button class="contact"><a href="contact.html">Contact</a></button>
   </nav>
 
-  <div class="main clearfix">
+  <div class="main">
     <section class="sub-section">      
-      <p>Main1</p>
+      <p>Nutritional Value: Fish is a highly nutritious food source. It is rich in high-quality protein, essential omega-3 
+        fatty acids, vitamins (such as vitamin D), and minerals (like iodine and selenium). Consuming fish is associated with 
+        various health benefits, including improved heart health and brain function.Main1</p>
     </section>
     <section class="sub-section">      
-      <p>Main2</p>
+      <p>Economic Impact: The fish industry plays a significant role in the global economy. It provides employment 
+        opportunities for millions of people worldwide, from fishermen and fish farmers to those involved in processing, 
+        distribution, and marketing. It contributes to income generation and economic stability in many regions.</p>
     </section>
     <section class="sub-section">      
-      <p>Main3</p>
+      <p>Food Security: It helps enhance food security by providing a reliable and affordable protein source, especially 
+        for coastal and island communities.</p>
     </section>
     <section class="sub-section">       
-      <p>Main4</p>
+      <p>Reduced Greenhouse Gas Emissions: Fish farming (aquaculture) is often considered more environmentally 
+        sustainable than other forms of livestock farming. Compared to cattle or poultry farming, aquaculture 
+        generally has a lower carbon footprint and requires less land and freshwater resources.</p>
     </section>
     <section class="sub-section">       
-      <p>Main5</p>
+      <p>Biodiversity Conservation: Sustainable fishing practices promote the conservation of marine ecosystems and the protection of 
+        endangered species. Efforts to manage fish stocks and prevent overfishing contribute to the preservation of biodiversity in the oceans.</p>
     </section>
     <section class="sub-section">      
-      <p>Main6</p>
+      <p>Export Opportunities: Fish and seafood products are often exported to international markets, contributing to a country's 
+        foreign exchange earnings. This trade provides valuable income and helps balance trade deficits.</p>
     </section>
     <section class="sub-section">      
-      <p>Main7</p>
+      <p>Low Carbon Footprint: Wild-caught fish generally have a lower carbon footprint compared to other animal protein sources like beef or lamb. 
+        This is because fish often require less feed and space, and they produce fewer greenhouse gas emissions per kilogram of meat produced.</p>
     </section>
     <section class="sub-section">      
-      <p>Main8</p>
+      <p>Diverse Culinary Options: Fish and seafood offer a wide range of culinary possibilities. They come in various 
+        species, sizes, and flavors, allowing for diverse cooking methods and recipes. This culinary diversity can enhance the 
+        overall dining experience and promote cultural exchange.</p>
     </section>
     <section class="sub-section">      
-      <p>Main9</p>
+      <p>Supports Coastal Communities: Many fishing communities rely on the fish industry for their livelihoods.</p>
     </section>
     <section class="sub-section">      
-      <p>Main10</p>
+      <p>Research and Innovation: The fish industry drives research and innovation in areas such as aquaculture technology, sustainable fishing 
+        practices, and seafood processing methods. This research contributes to advancements in food production and resource management.</p>
     </section> 
   </div>
 
-  <aside class="side clearfix">
-    <section class="sub-section">      
-      <p>SIDE1</p>
+  <aside class="side">
+    <section class="side-section">      
+      <p>Piracy and Maritime Crime</p>
     </section>
-    <section class="sub-section">      
-      <p>SIDE2</p>
+    <section class="side-section">      
+      <p>Overfishing</p>
     </section>
-    <section class="sub-section">      
-      <p>SIDE3</p>
+    <section class="side-section">      
+      <p>Environmental Impact</p>
     </section>
-    <section class="sub-section">      
-      <p>SIDE4</p>
+    <section class="side-section">      
+      <p>Lack of Regulation</p>
     </section>
-    <section class="sub-section">      
-      <p>SIDE5</p>
+    <section class="side-section">      
+      <p>Bycatch</p>
     </section>    
   </aside>
 
@@ -86,5 +100,6 @@
       <img class="footer-logo" src="photos\FreshFish.png" alt="Footer Logo 2">
     </div>
   </footer>
+
 </body>
 </html>
