about page content added

--- a/about.html
+++ b/about.html
@@ -22,7 +22,105 @@
     <button class="contact"><a href="contact.html">Contact</a></button>
   </nav>
 
-  <p>ABOUT</p>
+  <div class="container">
+    <!-- Side Menu -->
+    <div class="side-menu">
+      <a href="#item1">Item 1</a>
+      <a href="#item2">Item 2</a>
+      <a href="#item3">Item 3</a>
+      <a href="#item4">Item 4</a>
+      <a href="#item5">Item 5</a>
+      <a href="#item6">Item 6</a>
+      <a href="#item7">Item 7</a>
+      <a href="#item8">Item 8</a>
+      <a href="#item9">Item 9</a>
+      <a href="#item10">Item 10</a>
+    </div>
+    
+    <!-- Main Section -->
+    <div class="main-section">
+      <div id="item1" class="item">
+        <img src="item1.jpg" alt="Item 1">
+        <div class="item-description">
+          Description for Item 1 goes here.
+        </div>
+        <a class="item-menu-link" href="#item1">Go To Item Menu</a>
+      </div>      
+
+      <div id="item2" class="item">
+        <img src="item2.jpg" alt="Item 2">
+        <div class="item-description">
+          Description for Item 2 goes here. It can be longer.
+        </div>
+        <a class="item-menu-link" href="#item1">Go To Item Menu</a>
+      </div>
+     
+      <div id="item3" class="item">
+        <img src="item3.jpg" alt="Item 3">
+        <div class="item-description">
+          Description for Item 3 goes here. It can be longer.
+        </div>
+        <a class="item-menu-link" href="#item1">Go To Item Menu</a>
+      </div>
+
+      <div id="item4" class="item">
+        <img src="item4.jpg" alt="Item 4">
+        <div class="item-description">
+          Description for Item 4 goes here. It can be longer.
+        </div>
+        <a class="item-menu-link" href="#item1">Go To Item Menu</a>
+      </div>
+
+      <div id="item5" class="item">
+        <img src="item4.jpg" alt="Item 5">
+        <div class="item-description">
+          Description for Item 4 goes here. It can be longer.
+        </div>
+        <a class="item-menu-link" href="#item1">Go To Item Menu</a>
+      </div>
+
+      <div id="item6" class="item">
+        <img src="item4.jpg" alt="Item 6">
+        <div class="item-description">
+          Description for Item 4 goes here. It can be longer.
+        </div>
+        <a class="item-menu-link" href="#item1">Go To Item Menu</a>
+      </div>
+
+      <div id="item4" class="item">
+        <img src="item7.jpg" alt="Item 7">
+        <div class="item-description">
+          Description for Item 4 goes here. It can be longer.
+        </div>
+        <a class="item-menu-link" href="#item1">Go To Item Menu</a>
+      </div>
+
+      <div id="item8" class="item">
+        <img src="item4.jpg" alt="Item 8">
+        <div class="item-description">
+          Description for Item 4 goes here. It can be longer.
+        </div>
+        <a class="item-menu-link" href="#item1">Go To Item Menu</a>
+      </div>
+
+      <div id="item9" class="item">
+        <img src="item4.jpg" alt="Item 9">
+        <div class="item-description">
+          Description for Item 4 goes here. It can be longer.
+        </div>
+        <a class="item-menu-link" href="#item1">Go To Item Menu</a>
+      </div>
+
+      <div id="item10" class="item">
+        <img src="item4.jpg" alt="Item 10">
+        <div class="item-description">
+          Description for Item 4 goes here. It can be longer.
+        </div>
+        <a class="item-menu-link" href="#item1">Go To Item Menu</a>
+      </div>
+
+    </div>
+  </div>
 
   <footer>
     <div class="footer-logo-container">
