about page menu items defined and main text added

--- a/about.html
+++ b/about.html
@@ -25,16 +25,16 @@
   <div class="container">
     <!-- Side Menu -->
     <div class="side-menu">
-      <a href="#item1">Item 1</a>
-      <a href="#item2">Item 2</a>
-      <a href="#item3">Item 3</a>
-      <a href="#item4">Item 4</a>
-      <a href="#item5">Item 5</a>
-      <a href="#item6">Item 6</a>
-      <a href="#item7">Item 7</a>
-      <a href="#item8">Item 8</a>
-      <a href="#item9">Item 9</a>
-      <a href="#item10">Item 10</a>
+      <a href="#item1">Trawler</a>
+      <a href="#item2">Longliner</a>
+      <a href="#item3">Purse Seiner</a>
+      <a href="#item4">Gillnetter</a>
+      <a href="#item5">Drifter</a>
+      <a href="#item6">Lobster Boat</a>
+      <a href="#item7">Crabber</a>
+      <a href="#item8">Stern Trawler</a>
+      <a href="#item9">Shrimp Trawler</a>
+      <a href="#item10">Sailboat Fishing</a>
     </div>
     
     <!-- Main Section -->
@@ -42,7 +42,7 @@
       <div id="item1" class="item">
         <img src="item1.jpg" alt="Item 1">
         <div class="item-description">
-          Description for Item 1 goes here.
+          Trawler: Trawlers are used for catching fish by dragging a net through the water. They come in various sizes, from small coastal trawlers to large ocean-going trawlers.
         </div>
         <a class="item-menu-link" href="#item1">Go To Item Menu</a>
       </div>      
@@ -50,7 +50,7 @@
       <div id="item2" class="item">
         <img src="item2.jpg" alt="Item 2">
         <div class="item-description">
-          Description for Item 2 goes here. It can be longer.
+          Longliner: Longliners use a long fishing line with multiple baited hooks to catch fish like tuna and swordfish. They are commonly used in deep-sea fishing.
         </div>
         <a class="item-menu-link" href="#item1">Go To Item Menu</a>
       </div>
@@ -58,7 +58,7 @@
       <div id="item3" class="item">
         <img src="item3.jpg" alt="Item 3">
         <div class="item-description">
-          Description for Item 3 goes here. It can be longer.
+          Purse Seiner: Purse seiners use a large net to encircle schools of fish near the surface. The bottom of the net is then drawn closed like a purse to trap the fish.
         </div>
         <a class="item-menu-link" href="#item1">Go To Item Menu</a>
       </div>
@@ -66,7 +66,7 @@
       <div id="item4" class="item">
         <img src="item4.jpg" alt="Item 4">
         <div class="item-description">
-          Description for Item 4 goes here. It can be longer.
+          Gillnetter: Gillnetters use vertical panels of netting to catch fish that swim into them. The fish become entangled in the mesh by their gills.
         </div>
         <a class="item-menu-link" href="#item1">Go To Item Menu</a>
       </div>
@@ -74,7 +74,7 @@
       <div id="item5" class="item">
         <img src="item4.jpg" alt="Item 5">
         <div class="item-description">
-          Description for Item 4 goes here. It can be longer.
+          Drifter: Drifters are small, open boats that use drift nets to catch fish. They are often used in artisanal and subsistence fishing.
         </div>
         <a class="item-menu-link" href="#item1">Go To Item Menu</a>
       </div>
@@ -82,7 +82,7 @@
       <div id="item6" class="item">
         <img src="item4.jpg" alt="Item 6">
         <div class="item-description">
-          Description for Item 4 goes here. It can be longer.
+          Lobster Boat: Lobster boats are designed specifically for lobster fishing. They often have a low draft to access shallow waters where lobsters are found.
         </div>
         <a class="item-menu-link" href="#item1">Go To Item Menu</a>
       </div>
@@ -90,7 +90,7 @@
       <div id="item4" class="item">
         <img src="item7.jpg" alt="Item 7">
         <div class="item-description">
-          Description for Item 4 goes here. It can be longer.
+          Crabber: Crabbing vessels are used to catch crabs, such as snow crabs and king crabs, often in cold, northern waters. They use pots or traps to catch the crabs.
         </div>
         <a class="item-menu-link" href="#item1">Go To Item Menu</a>
       </div>
@@ -98,7 +98,7 @@
       <div id="item8" class="item">
         <img src="item4.jpg" alt="Item 8">
         <div class="item-description">
-          Description for Item 4 goes here. It can be longer.
+          Stern Trawler: Stern trawlers are a type of trawler where the net is deployed from the stern (back) of the vessel. They are common in deep-sea fishing.
         </div>
         <a class="item-menu-link" href="#item1">Go To Item Menu</a>
       </div>
@@ -106,7 +106,7 @@
       <div id="item9" class="item">
         <img src="item4.jpg" alt="Item 9">
         <div class="item-description">
-          Description for Item 4 goes here. It can be longer.
+          Shrimp Trawler: These trawlers are specialized for catching shrimp. They use fine mesh nets to target shrimp species.
         </div>
         <a class="item-menu-link" href="#item1">Go To Item Menu</a>
       </div>
@@ -114,7 +114,7 @@
       <div id="item10" class="item">
         <img src="item4.jpg" alt="Item 10">
         <div class="item-description">
-          Description for Item 4 goes here. It can be longer.
+          Sailboat Fishing: In some regions, traditional sailboats are still used for fishing. These boats use various fishing methods like handlines and simple nets.
         </div>
         <a class="item-menu-link" href="#item1">Go To Item Menu</a>
       </div>
