--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     <!-- Main Section -->
     <div class="main-section">
       <div id="item1" class="item">
-        <img src="item1.jpg" alt="Item 1">
+        <img src="photos\trawler.png" alt="Trawler">
         <div class="item-description">
           Trawler: Trawlers are used for catching fish by dragging a net through the water. They come in various sizes, from small coastal trawlers to large ocean-going trawlers.
         </div>
@@ -48,7 +48,7 @@
       </div>      
 
       <div id="item2" class="item">
-        <img src="item2.jpg" alt="Item 2">
+        <img src="photos\longliner.png" alt="Longliner">
         <div class="item-description">
           Longliner: Longliners use a long fishing line with multiple baited hooks to catch fish like tuna and swordfish. They are commonly used in deep-sea fishing.
         </div>
@@ -56,7 +56,7 @@
       </div>
      
       <div id="item3" class="item">
-        <img src="item3.jpg" alt="Item 3">
+        <img src="photos\purseSeiner.png" alt="Purse Seiner">
         <div class="item-description">
           Purse Seiner: Purse seiners use a large net to encircle schools of fish near the surface. The bottom of the net is then drawn closed like a purse to trap the fish.
         </div>
@@ -64,7 +64,7 @@
       </div>
 
       <div id="item4" class="item">
-        <img src="item4.jpg" alt="Item 4">
+        <img src="photos\gillnetter.png" alt="Gillnetter">
         <div class="item-description">
           Gillnetter: Gillnetters use vertical panels of netting to catch fish that swim into them. The fish become entangled in the mesh by their gills.
         </div>
@@ -72,7 +72,7 @@
       </div>
 
       <div id="item5" class="item">
-        <img src="item4.jpg" alt="Item 5">
+        <img src="photos\drifter.png" alt="Drifter">
         <div class="item-description">
           Drifter: Drifters are small, open boats that use drift nets to catch fish. They are often used in artisanal and subsistence fishing.
         </div>
@@ -80,7 +80,7 @@
       </div>
 
       <div id="item6" class="item">
-        <img src="item4.jpg" alt="Item 6">
+        <img src="photos\lobsterBoat.png" alt="Lobster Boat">
         <div class="item-description">
           Lobster Boat: Lobster boats are designed specifically for lobster fishing. They often have a low draft to access shallow waters where lobsters are found.
         </div>
@@ -88,7 +88,7 @@
       </div>
 
       <div id="item4" class="item">
-        <img src="item7.jpg" alt="Item 7">
+        <img src="photos\crabber.png" alt="Crabber">
         <div class="item-description">
           Crabber: Crabbing vessels are used to catch crabs, such as snow crabs and king crabs, often in cold, northern waters. They use pots or traps to catch the crabs.
         </div>
@@ -96,7 +96,7 @@
       </div>
 
       <div id="item8" class="item">
-        <img src="item4.jpg" alt="Item 8">
+        <img src="photos\sternTrawler.png" alt="Stern Trawler">
         <div class="item-description">
           Stern Trawler: Stern trawlers are a type of trawler where the net is deployed from the stern (back) of the vessel. They are common in deep-sea fishing.
         </div>
@@ -104,7 +104,7 @@
       </div>
 
       <div id="item9" class="item">
-        <img src="item4.jpg" alt="Item 9">
+        <img src="photos\shrimpTrawler.png" alt="Shrimp Trawler">
         <div class="item-description">
           Shrimp Trawler: These trawlers are specialized for catching shrimp. They use fine mesh nets to target shrimp species.
         </div>
@@ -112,7 +112,7 @@
       </div>
 
       <div id="item10" class="item">
-        <img src="item4.jpg" alt="Item 10">
+        <img src="photos\sailboatFishing.png" alt="Sailboat Fishing">
         <div class="item-description">
           Sailboat Fishing: In some regions, traditional sailboats are still used for fishing. These boats use various fishing methods like handlines and simple nets.
         </div>
