--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
     <button class="home"><a href="index.html">Home</a></button>
     <button class="about active"><a href="about.html">About</a></button>
     <button class="contact"><a href="contact.html">Contact</a></button>
+    <button class="fun"><a href="fun.html">Fun</a></button>
   </nav>
 
   <div class="container">
