--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <button class="home active"><a href="index.html">Home</a></button>
     <button class="about"><a href="about.html">About</a></button>
     <button class="contact"><a href="contact.html">Contact</a></button>
+    <button class="fun"><a href="fun.html">Fun</a></button>
   </nav>
 
   <div class="main">
