--- a/fun.html
+++ b/fun.html
@@ -24,7 +24,8 @@
   </nav>
 
   <div class="drawing-container">
-      <div class="colors">
+    <p>Drawing boats is fun! Our entire fleet was designed with this FREE powerful drawing tool!</p>  
+    <div class="colors">
           <div class="color-button" style="background-color: red;"></div>
           <div class="color-button" style="background-color: blue;"></div>
           <div class="color-button" style="background-color: green;"></div>
