removed empty var and commands

--- a/fun.html
+++ b/fun.html
@@ -35,7 +35,7 @@
       </div>
       <canvas id="canvas" width="800" height="500"></canvas>
       <div class="controls">
-          <div class="color-display" id="color-display" style="background-color:black;"></div>          
+          <div class="color-display" id="color-display" style="background-color:black;">YOU SELECTED THIS COLOR</div>          
       </div>
   </div>
 
