--- a/fun.html
+++ b/fun.html
@@ -24,7 +24,7 @@
   </nav>
 
   <div class="drawing-container">
-    <p>Drawing boats is fun! Our entire fleet was designed with this FREE powerful drawing tool!</p>  
+    <p>"Drawing boats is fun! Our entire fleet was designed using this powerful drawing tool, which is FREE!"</p>  
     <div class="colors">
           <div class="color-button" style="background-color: red;"></div>
           <div class="color-button" style="background-color: blue;"></div>
