--- a/fun.html
+++ b/fun.html
@@ -24,7 +24,7 @@
   </nav>
 
   <div class="drawing-container">
-    <p>"Drawing boats is fun! Our entire fleet was designed using this powerful drawing tool, which is FREE!"</p>  
+    <p>Enjoy this FREE drawing tool! You can use the preset colors or create your own by using the color picker or the sliders.</p>  
     <div class="colors">
           <div class="color-button" style="background-color: red;"></div>
           <div class="color-button" style="background-color: blue;"></div>
