eraser working now

--- a/fun.html
+++ b/fun.html
@@ -32,7 +32,8 @@
           <div class="color-button" style="background-color: yellow;"></div>
           <div class="color-button" style="background-color: black;"></div>    
           <input type="color" id="color-picker" value="#fcfcfc">        
-          <button id="clear-canvas">Clear</button>  
+          <button id="clear-canvas">Clear</button>
+          <button id="eraser-button">Eraser</button>  
       </div>
       <canvas id="canvas" width="800" height="500"></canvas>
       <div class="controls">
